# libgdx-water

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  settings.gradle
cpp/: CMakeLists.txt  Extension.cpp  Extension.h  Lib.cpp  Lib.h  OpenGLDeviceType.h  PreGL.h  dll.cpp  mesh.h  model.h  shader.h  shaders-str.h  wave.cpp  wave.h
gdx-water-android/: AndroidManifest.xml  build.gradle
gdx-water-android/src/main/java/io/github/srjohnathan/gdx/water/android/: AGL.java  ContextWater.java  Loader.java
gdx-water-core/: build.gradle
gdx-water-core/src/main/java/io/github/srjohnathan/gdx/water/core/: CGL.java  Camera.java  Camera35.java  GL.java  Light.java  Loader.java  MasterRenderer.java  Maths.java  RawModel.java  ShaderProgram.java  TestShader.java  WaterFrameBuffers.java  WaterGdx.java  WaterRenderer.java  WaterShader.java  WaterTile.java  WaterTile35.java
gdx-water-core/src/main/java/io/github/srjohnathan/gdx/water/core/math/: Complex.java  Vec2f.java  Vec3f.java  Vec4f.java
gdx-water-core/src/main/resources/io/github/srjohnathan/gdx/water/assets/: ft.fsh  vt.vsh  waterFragment.frag  waterVertex.vert
gdx-water-core/src/main/resources/io/github/srjohnathan/gdx/water/assets/water/: lamp.frag  lamp.vert  surface.frag  surface.vert
gdx-water-desktop/: build.gradle
gdx-water-desktop/src/main/java/io/github/srjohnathan/gdx/water/desktop/: DGL.java  NativeUtils.java  OsCheck.java  TextureLoade.java  TextureLoader.java  WaterGdxLouder.java
jni/: st.i
testLib/: CMakeLists.txt  camera.h  main.cpp
